$Id$

v0.83.8		22-Jan-2006

v0.83.7		31-Dec-2005 - 22-Jan-2006

	upgrade:
		Add extra switches to unarchiver commands netry 11, see 
		mbsetup for the archivers.

	mbsebbs:
		There are no paths anymore in OLR download packet files.
		Made OLR bluewave packets CPU independant. (under test).

	mbfido:
		Made searching file file_id.diz case insensitive.

	mbfile:
		Made searching file file_id.diz case insensitive.

	mbsetup:
		Added switches to default extract commands for file_id.diz 
		files to:
		  nomarch -U
		  rar -cu
		  unrar -cu
		  unzip -L
		Other archives don't support forced upper or lowercase.
		  

v0.83.6		17-Dec-2005 - 31-Dec-2005

	mbfido:
		Removed gated SB debug logmessages.
		Removed debug messages for obsolete ticfiles.

	mbcico:
		Don't add files to send anymore when batchnr > 20 to prevent
		an infinite session loop.

	mbfile:
		Fixed a crash when files.bbs had empty lines.

	mbtask:
		Better messages during servers connections reset.


v0.83.5		16-Dec-2005 - 17-Dec-2005

	mbtask:
		Better handling of changes in the list of chatservers.
		Added some missing mutex_locks.
		Removed dynamic IP address debug logging.
		Added global reset for chatservers every 24 hours.


v0.83.4		04-Dec-2005 - 16-Dec-2005

	mbfile:
		Fixed file importing of non-archived files.
		The test for files.bbs for files to import was done in the
		wrong directory.
		If a file is not removed from disk during pack, a error log
		is created instead of a normal log.

	mbtask:
		Experimental code to recover from a half dead chatlink.
		Added some protection against looped configuration.
		All IBC log lines start now with IBC: to allow easier grep.


v0.83.3		03-Dec-2005 - 04-Dec-2005

	remark:
		This version was broken.

	libmbse.a:
		Fixed new tmpwork functions.

	mbfido:
		Fixed creation of tmpwork directory.


v0.83.2		16-Nov-2005 - 03-Dec-2005

	libmbse.a:
		Added temp workdirectory functions.

	mbfido:
		Fixed crash when receiving bad tics.