@@ -4,8 +4,8 @@
 
 include ../Makefile.global
 
-SRCS		= mball.c dlcount.c mblang.c mbstat.c mbtoberep.c mbuser.c
-HDRS		= mball.h dlcount.h mbstat.h mbuser.h
+SRCS		= mball.c dlcount.c mblang.c mbstat.c mbtoberep.c mbuser.c mbbw.c
+HDRS		= mball.h dlcount.h mbstat.h mbuser.h mbbw.h
 MBALL_OBJS	= mball.o dlcount.o
 MBALL_LIBS	= ../lib/libmbse.a ../lib/libdbase.a
 MBLANG_OBJS	= mblang.o
@@ -16,8 +16,10 @@ MBTOBE_OBJS	= mbtoberep.o
 MBTOBE_LIBS	= ../lib/libmbse.a ../lib/libdbase.a
 MBUSER_OBJS	= mbuser.o
 MBUSER_LIBS	= ../lib/libmbse.a ../lib/libdbase.a
+MBBW_OBJS	= mbbw.o
+MBBW_LIBS	= ../lib/libmbse.a ../lib/libdbase.a
 OTHER		= Makefile
-TARGET		= mball mblang mbstat mbtoberep mbuser
+TARGET		= mball mblang mbstat mbtoberep mbuser mbbw
 
 #############################################################################################################
 
@@ -44,6 +46,9 @@ mbtoberep:	${MBTOBE_OBJS} ${MBTOBE_LIBS}
 mbuser:		${MBUSER_OBJS} ${MBUSER_LIBS}
 		${CC} -o mbuser ${MBUSER_OBJS} ${LDFLAGS} ${LIBS} ${MBUSER_LIBS}
 
+mbbw:		${MBBW_OBJS} ${MBBW_LIBS}
+		${CC} -o mbbw ${MBBW_OBJS} ${LDFLAGS} ${LIBS} ${MBBW_LIBS}
+
 install:	all
 		@if [ "`id -un`" != "root" ] ; then \
 			echo; echo " Must be root to install!"; echo; exit 3; \
@@ -53,6 +58,7 @@ install:	all
 		${INSTALL} -c -s -o ${OWNER} -g ${GROUP}  -m 0750 mbstat    ${BINDIR}
 		${INSTALL} -c -s -o ${OWNER} -g ${GROUP}  -m 0700 mbtoberep ${BINDIR}
 		${INSTALL} -c -s -o ${ROWNER} -g ${RGROUP} -m 6711 mbuser    ${BINDIR}
+		${INSTALL} -c -s -o ${OWNER} -g ${GROUP}  -m 0750 mbbw      ${BINDIR}
 		@rm -f mbchat
 
 filelist:	Makefile
@@ -85,8 +91,10 @@ depend:
 # DO NOT DELETE THIS LINE - MAKE DEPEND RELIES ON IT
 # Dependencies generated by make depend
 mball.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h ../lib/mbsedb.h dlcount.h mball.h
+dlcount.o: ../config.h ../lib/mbselib.h ../lib/users.h ../lib/mbsedb.h dlcount.h
 mblang.o: ../config.h ../lib/mbselib.h
 mbstat.o: ../config.h ../lib/mbselib.h ../lib/users.h ../lib/mbsedb.h mbstat.h
 mbtoberep.o: ../config.h ../lib/mbselib.h
 mbuser.o: ../config.h ../lib/mbselib.h ../lib/users.h ../lib/mbsedb.h mbuser.h
+mbbw.o: ../config.h ../lib/mbselib.h ../lib/users.h ../lib/bluewave.h ../lib/mbsedb.h mbbw.h
 # End of generated dependencies
